[metadata]
name = Atoms Core
version = 1.0.3
author = Mirko Brombin
author_email = send@mirko.pm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mirkobrombin/atoms-core
project_urls =
    Bug Tracker = https://github.com/mirkobrombin/atoms-core/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0-only
    Operating System :: POSIX :: Linux
[options]
python_requires = >=3.9